# software-renderer

./: CMakeLists.txt  LICENSE  README.md  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h
